<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SavedDestinations"

    >
    <Button
        android:id="@+id/btn_home"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Questionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Questionnaire"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintLeft_toRightOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_home" />

    <TextView
        android:id="@+id/Q10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q10"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/Questionnaire"
        app:layout_constraintRight_toLeftOf="@id/Questionnaire" />

    <TextView
        android:id="@+id/Q10_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="50dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q1_10"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/Q10" />



    <Button
        android:id="@+id/next_Q10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/previous_Q10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previouss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="88dp"
        android:text="@string/A10_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/Q10_10" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/A10_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/A10_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="56dp"
        android:text="@string/A10_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox3" />
</androidx.constraintlayout.widget.ConstraintLayout>