<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/darker_gray"
    android:id="@+id/Question1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q1"
    >

    <Button
        android:id="@+id/btn_home"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Questionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Questionnaire"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintLeft_toRightOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_home" />

    <TextView
        android:id="@+id/Q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/Questionnaire"
        app:layout_constraintTop_toBottomOf="@id/Questionnaire" />

    <TextView
        android:id="@+id/Q1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="88dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q1_1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/Q1" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/Q1_1"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/next_Q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>