<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/darker_gray"
    >
    <Button
        android:id="@+id/btn_home"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SavedDestinations"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/city_back"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>