<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Question3"
    android:background="@android:color/darker_gray"

    >

    <Button
        android:id="@+id/btn_home"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Questionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Questionnaire"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintLeft_toRightOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_home" />

    <TextView
        android:id="@+id/Q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q3"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/Questionnaire"
        app:layout_constraintRight_toLeftOf="@id/Questionnaire" />

    <TextView
        android:id="@+id/Q3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="50dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Q1_3"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/Q3" />



    <Button
        android:id="@+id/next_Q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/previous_Q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previouss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="173dp"
        android:layout_height="173dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="104dp"
        android:selectedWeekBackgroundColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@id/previous_Q3"
        app:layout_constraintRight_toLeftOf="@id/calendarView2"
        app:layout_constraintRight_toRightOf="parent" />


    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="173dp"
        android:layout_height="173dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="104dp"
        android:selectedWeekBackgroundColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@id/next_Q3"
        app:layout_constraintRight_toRightOf="@id/calendarView" />
</androidx.constraintlayout.widget.ConstraintLayout>