<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Destinations"
    tools:context=".Destinations"
    >
    <Button
        android:id="@+id/btn_home"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#0288D1"
        android:text="@string/Destinations"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="locale"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtSelectCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#FFFFFF"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/txtSelectCity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <Button
        android:id="@+id/button_city1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button_city1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSelectCity"
        app:strokeColor="@android:color/darker_gray" />


</androidx.constraintlayout.widget.ConstraintLayout>

